--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "backend/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/app.js",
-    "server":"nodemon backend/app.js",
-    "client":"npm start --prefix frontend",
-    "dev": " concurrently \"npm start\" \"npm run client\""
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
